trying to fix pages still

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://{Re1d0n}.github.io/{react-portfolio}",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
